<resources>
    <!-- strings.xml
     String References for Android Calling
     Created by: Jordan Graves
     Created on: 1/28/2019
     Last Modified by: Jordan Graves
     Last Modified on: 1/29/2019
     Assignment/Project: A290 Android Development Homework Project 1
     Part of: Android Calling Project -->
    <string name="app_name">Android Calling</string>
    <string name="action_settings">Settings</string>
    <string name="hello_universe">Hello Universe!!! Android Calling!</string>
    <string name="FirstButton">My First Button</string>
    <string name="FirstLargeText">My First Large Text Box</string>
    <string name="HomeScreenCheckbox">My Home Screen Check Box</string>
    <string name="MyFirstSwitch">My First Switch</string>
</resources>
